--- a/www/spec.html
+++ b/www/spec.html
@@ -22,10 +22,10 @@
         <title>Jasmine Spec Runner</title>
 
         <!-- jasmine source -->
-        <link rel="shortcut icon" type="image/png" href="spec/lib/jasmine-1.2.0/jasmine_favicon.png">
-        <link rel="stylesheet" type="text/css" href="spec/lib/jasmine-1.2.0/jasmine.css">
-        <script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine.js"></script>
-        <script type="text/javascript" src="spec/lib/jasmine-1.2.0/jasmine-html.js"></script>
+        <link rel="shortcut icon" type="image/png" href="spec/vendor/jasmine-1.2.0/jasmine_favicon.png">
+        <link rel="stylesheet" type="text/css" href="spec/vendor/jasmine-1.2.0/jasmine.css">
+        <script type="text/javascript" src="spec/vendor/jasmine-1.2.0/jasmine.js"></script>
+        <script type="text/javascript" src="spec/vendor/jasmine-1.2.0/jasmine-html.js"></script>
 
         <!-- include source files here... -->
         <script type="text/javascript" src="js/index.js"></script>
