--- a/www/index.html
+++ b/www/index.html
@@ -153,7 +153,7 @@
         <script id="footer-contacts-template" type="text/x-handlebars-template">
             <span class="navbar-text" style="text-transform: uppercase; font-size: 11px; line-height: 10px; width: 150px">Overall balance:</span>
             <span class="balance monospace pull-right">
-              <span class="{{color balance}}">{{sign balance}}{{currency}}</sapn>
+              <span class="{{color me.balance}}">{{sign me.balance}}{{me.currency}}</sapn>
             </span>
         </script>
 
@@ -253,17 +253,11 @@
         <script type="text/javascript" src="js/vendor/underscore.js"></script>
         <script type="text/javascript" src="js/vendor/backbone.js"></script>
         <script type="text/javascript" src="js/vendor/backbone.basicauth.js"></script>
+        <script type="text/javascript" src="js/vendor/backbone.dualstorage.js"></script>
         <script type="text/javascript" src="js/vendor/handlebars.js"></script>
         <script type="text/javascript" src="js/vendor/moment-with-langs.js"></script>
         <script type="text/javascript" src="js/vendor/phone-format.js"></script>
         <script type="text/javascript" src="js/vendor/sha256.js"></script>
-
-        <!-- HACK: declaring the "namespace" here -->
-        <script type="text/javascript">
-          var app = {
-            location: "http://localhost:9000"
-          }; 
-        </script>
 
         <!-- Make Backbone use CORS -->
         <script type="text/javascript">
@@ -277,7 +271,18 @@
           })();
         </script>
 
+        <!-- HACK: declaring the "namespace" here -->
+        <script type="text/javascript">
+          var app = {
+            location: "http://localhost:9000"
+          }; 
+        </script>
+
         <!-- add the mvc stuff -->
+        <script type="text/javascript" src="js/model/transaction-model.js"></script>
+        <script type="text/javascript" src="js/collection/transaction-collection.js"></script>
+        <script type="text/javascript" src="js/view/transaction-view.js"></script>
+
         <script type="text/javascript" src="js/model/contact-model.js"></script>
         <script type="text/javascript" src="js/collection/contact-collection.js"></script>
         <script type="text/javascript" src="js/view/contact-view.js"></script>
@@ -287,10 +292,6 @@
 
         <script type="text/javascript" src="js/view/header-view.js"></script>
         <script type="text/javascript" src="js/view/footer-view.js"></script>
-
-        <script type="text/javascript" src="js/model/transaction-model.js"></script>
-        <script type="text/javascript" src="js/collection/transaction-collection.js"></script>
-        <script type="text/javascript" src="js/view/transaction-view.js"></script>
 
         <script type="text/javascript" src="js/model/app-model.js"></script>
         <script type="text/javascript" src="js/view/app-view.js"></script>
